Spark Integration